﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-20 Marc Delisle  <lem9@users.sourceforge.net>
    * server_databases.php: security fix

2005-10-20 Alexander M. Turek  <me@derrabus.de>
    * libraries/mysql_charsets.lib.php:
      - On MySQL 5.0.6, we don't have to parse SHOW CREATE DATABASE anymore,
        if we just want to get to know a database's default collation;
     - Make use of this fancy new function PMA_DBI_fetch_value().

2005-10-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * sql.php, footer.inc.php: refresh left frame on view creation
    * left.php: view icon for views
    * libraries/left.js: dropped
    * libraries/function.js: tuned PMA_merkRowsInit():
      every table with class data now has mark and hover effect
    * css/phpmyadmin.css.php: nowrap for IE and pre for the rest
    * css/phpmyadmin.css.php, server_status.php: css cleanup
    * db_details_structure.php, db_details_db_info.php:
      - XHTML compliance, styling outsourced, row marker outsourced
      - do not too much if there is no table

2005-10-19 Alexander M. Turek  <me@derrabus.de>
    * lang/*.inc.php, libraries/mysql_charsets.lib.php: Correct description
      for collations utf8_esperanto_ci, ucs2_esperanto_ci.
    * lang/german-*.inc.php: Updated some untranslated strings.

2005-10-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/bookmark.lib.php: PHP 5.1.0-dev compatibility

2005-10-19 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * footer.inc.php, index.php, server_databases.php, libraries/querywindow.js:
      fix problem not remembering selected server
    * libraries/tooltip.js, themes/*/theme_right.css.php:
      moved not always needed code out of event handler, fixed display with larger font
    * libraries/function.js, css/phpmyadmin.css.php:
      added mark and hover effect to every table of class data
    * libraries/sql_query_form.lib.php: open db link from querywindow in main frame